--- a/notebooks/Create MCTS Improvement Plot.ipynb
+++ b/notebooks/Create MCTS Improvement Plot.ipynb
@@ -21,7 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
+   "id": "4e3aa2d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "means = np.array([0.50853, 0.50924, 0.51011, 0.51218, 0.51451])*100\n",
+    "stes = np.array([0.00281, 0.00275, 0.00275, 0.00277, 0.00271])*100\n",
+    "iterations = [20, 50, 100, 400, 800]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1ec2a397",
    "metadata": {},
    "outputs": [
@@ -31,7 +43,7 @@
        "(Text(0.5, 0, 'MCTS Iterations'), Text(0, 0.5, 'APA Local Policy'))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -50,9 +62,6 @@
    ],
    "source": [
     "plt.figure(dpi=300)\n",
-    "means = np.array([0.50853, 0.50924, 0.51011, 0.51218, 0.51451])*100\n",
-    "stes = np.array([0.00281, 0.00275, 0.00275, 0.00277, 0.00271])*100\n",
-    "iterations = [20, 50, 100, 400, 800] \n",
     "plt.plot(iterations, means)\n",
     "plt.fill_between(iterations, means-stes, means+stes, alpha=0.5)\n",
     "plt.xscale('log')\n",
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "ea0c266a",
    "metadata": {},
    "outputs": [
@@ -71,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_30119/2484483365.py:14: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_165322/392355602.py:6: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  plt.gca().set_xticklabels([0]+iterations)\n"
      ]
     },
@@ -81,7 +90,7 @@
        "(Text(0.5, 0, 'MCTS Iterations'), Text(0, 0.5, 'Points against Local Policy'))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -99,15 +108,7 @@
     }
    ],
    "source": [
-    "plt.figure(dpi=300)\n",
-    "0.50853+-0.00281\n",
-    "0.50924+-0.00275\n",
-    "0.51011+-0.00275\n",
-    "0.51218+-0.00277\n",
-    "0.51451+-0.00271\n",
-    "means = np.array([0.50853, 0.50924, 0.51011, 0.51218, 0.51451])*100\n",
-    "stes = np.array([0.00281, 0.00275, 0.00275, 0.00277, 0.00271])*100\n",
-    "iterations = [20, 50, 100, 400, 800] \n",
+    "plt.figure(dpi=300) \n",
     "plt.bar(range(len(iterations)), means, yerr=stes, capsize=10)\n",
     "#plt.fill_between(iterations, means-stes, means+stes, alpha=0.5)\n",
     "plt.ylim([50, 52])\n",
